--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li class="itensOne" href="#" id="ConsultaOLT">Status OLT</li>
             <li class="itensOne" href="#" id="Scripts">Comandos OLT</li> 
             <li class="itensOne" href="#" id="Relatorios">Relatórios</li>
-            <li class="itensOne" href="#" id="Usuários">Usuários</li>
+            <li class="itensOne" href="#" id="Usuários">Onildo Lindo de mais</li>
           </ul>
       </div>
     </header>
