--- a/index.html
+++ b/index.html
@@ -147,6 +147,11 @@
 
           <div class="tabela-configurar-onu-2">
             <table class="table table-striped">
+              <thead>
+                <tr>
+                  Informações Adicionais
+                </tr>
+              </thead>
               <tr>
                 <th> Tempo ligado: </th>
                 <td id="temperature-onu"> 8 dia(s) 17h 44m 37s</td>
