Alterando informaçõe do softaware e hadware
Alterando a descrição para português

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <td id="mac-onu"> FHTT923D3890 </td>
                 <td id="olt-cliente"> ARACAGY </td>
                 <td id="slot-olt"> 16 </td>
-                <td id="pon-olt"> 7 </td>   
+                <td id="pon-olt"> 7 </td>
               </tr>
             </tbody>
           </table>
@@ -135,11 +135,11 @@
                 <td id="dns-2"> 201.76.128.34 </td>
               </tr>
               <tr>
-                <th> Hardware version: </th>
+                <th> Versão do Hardware: </th>
                 <td id="dns-2"> WKF2.134.285f4G </td>
               </tr>
               <tr>
-                <th> Software version: </th>
+                <th> Versão do Software: </th>
                 <td id="temperature-onu"> RP2643 </td>
               </tr>
             </table>
@@ -216,7 +216,7 @@
                   <th> CANAL DO WIFI </th>
                 </tr>
               </thead>
-              <tbody class="informacoes-variaveis-wifi justify-content-center">
+              <tbody class="informacoes-variaveis-wifi">
                 <tr>
                   <td id="rede-wifi">
                     <form>
