--- a/status-olt.html
+++ b/status-olt.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Informações OLT </title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -28,33 +28,66 @@
     </header>
 
     <div class="menuTwo">
-        
-      <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist">
-
-        <li class="nav-item" role="presentation">
-            <div class="dropdown">
-                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Selecione a OLT
-                </a>
-              
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-            </div>
-        </li>
-        <li class="nav-item" role="presentation">
-          <a class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false"> CONFIGURAR ONU </a>
-        </li>
-        <li class="nav-item" role="presentation">
-          <a class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false"> WIFI ONU </a>
-        </li>
-        <li class="nav-item" role="presentation">
-          <a class="nav-link" id="pills-phone-tab" data-bs-toggle="pill" href="#pills-phone" role="tab" aria-controls="pills-phone" aria-selected="false">TELEFONIA</a>
-        </li>
-      </ul>
-
+      <div class="input-group mb-3">
+        <div class="input-group-prepend">
+          <label class="input-group-text" for="inputGroupSelect01"> Escolha a OLT</label>
+        </div>
+        <select class="custom-select select" id="inputGroupSelect01">
+          <option selected>Cidade Operária</option>
+          <option value="1">Araçagy</option>
+          <option value="2">Bacanga</option>
+          <option value="3">Maiobão 2</option>
+          <option value="4">Maiobão 1</option>
+          <option value="5">Cidade Verde</option>
+          <option value="6">São José de Ribamar</option>
+          <option value="7">Condomínio Pleno</option>
+          <option value="8">Raposa</option>
+          <option value="9">São Raimundo</option>
+          <option value="10">Vila Luizão</option>
+          <option value="11">Arthur Carvalho</option>
+          <option value="12">Tambaú</option>
+          <option value="13">Alto Paranã</option>
+          <option value="14">La Belle Park</option>
+          <option value="15">Portal do Paço</option>
+          <option value="16">Jardins</option>
+          <option value="17">Cidade Olímpica 1</option>
+          <option value="18">Cidade Olímpica 2</option>
+          <option value="19">Cidade Olímpica 3</option>
+          <option value="20">Janaína</option>
+          <option value="21">Vinhais</option>
+          <option value="23">Olho D'agua</option>
+          <option value="24">D'Italy</option>
+          <option value="25">Turu</option>
+          <option value="26">Calhau</option>
+          <option value="27">Centro</option>
+          <option value="28">Rosário 1</option>
+          <option value="29">Rosário 2</option>
+          <option value="30">Kiola</option>
+          <option value="31">Manaíra</option>
+          <option value="32">Santa Rita 1</option>
+          <option value="33">Santa Rita 2</option>
+          <option value="34">Eco Park</option>
+          <option value="35">Cohab Anil 4</option>
+          <option value="36">Villagio Cohatrac</option>
+          <option value="37">Conjunto Primavera</option>
+          <option value="38">Cohab Anil 3</option>
+          <option value="39">Planalto Anil 1</option>
+          <option value="40">Cohatrac 4</option>
+          <option value="41">Cohatrac 1</option>
+          <option value="42">Jardim Atlântico</option>
+          <option value="43">Itapecuru 1</option>
+          <option value="44">Itapecuru 2</option>
+          <option value="45">Itapecuru 3</option>
+          <option value="46">Chácara Brasil</option>
+          <option value="47">Turu 2</option>
+          <option value="48">Maranhão Novo</option>
+          <option value="49">Matões Turu</option>
+          <option value="50">Bequimão</option>
+          <option value="51">Bequimão 2</option>
+          <option value="52">Cohama</option>
+          <option value="53">Angelim</option>
+        </select>
+      </div>
     </div>
 </body>
 
