--- a/status-olt.html
+++ b/status-olt.html
@@ -28,6 +28,7 @@
     </header>
 
     <div class="menuTwo">
+
       <div class="input-group mb-3">
         <div class="input-group-prepend">
           <label class="input-group-text" for="inputGroupSelect01"> Escolha a OLT</label>
@@ -88,6 +89,45 @@
           <option value="53">Angelim</option>
         </select>
       </div>
+
+      <div class="input-group mb-3">
+        <div class="input-group-prepend">
+          <label class="input-group-text" for="inputGroupSelect01"> Escolha o SLOT</label>
+        </div>
+        <select class="custom-select select" id="inputGroupSelect01">
+          <option selected>1</option>
+          <option value="1">2</option>
+          <option value="2">3</option>
+          <option value="3">4</option>
+        </select>
+      </div>
+
+      <div class="input-group mb-3">
+        <div class="input-group-prepend">
+          <label class="input-group-text" for="inputGroupSelect01"> Escolha a PON</label>
+        </div>
+        <select class="custom-select select" id="inputGroupSelect01">
+          <option selected>1</option>
+          <option value="1">2</option>
+          <option value="2">3</option>
+          <option value="3">4</option>
+          <option value="4">5</option>
+          <option value="5">6</option>
+          <option value="6">7</option>
+          <option value="7">8</option>
+          <option value="8">9</option>
+          <option value="9">10</option>
+          <option value="10">11</option>
+          <option value="11">12</option>
+        </select>
+      </div>
+
+      <div class="fixed-bottom">
+        <div class="barra-fixa status">
+          <button type="button" class="btn btn-primary btn-lg" id="reset-onu">Consultar</button>
+        </div>
+      </div>
+
     </div>
 </body>
 
