Update Last Joamir

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <ul>
             <li class="itensOne" href="#" id="InformacoesONU">Informações ONU</li>
             <li class="itensOne" href="#" id="ProvisionarONU">Provisionar ONU</a></li>
-            <li class="itensOne"><a href="#status-olt.html" id="ConsultaOLT">Status OLT </a></li>
+            <li class="itensOne"><a class="nav-link" href="status-olt.html" id="ConsultaOLT">Status OLT </a></li>
             <li class="itensOne" href="#" id="Scripts">Comandos OLT</li> 
             <li class="itensOne" href="#" id="Relatorios">Relatórios</li>
             <li class="itensOne" href="#" id="Usuários">Usuários</li>
