--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
       <div class="menuOne">
           <ul>
-            <li class="itensOne" href="#" id="InformacoesONU">Informações ONU</li>
+            <li class="itensOne" href="#" id="InformacoesONU"><a href="index.html" class="nav-link"> Informações ONU</a></li>
             <li class="itensOne" href="#" id="ProvisionarONU">Provisionar ONU</a></li>
             <li class="itensOne"><a class="nav-link" href="status-olt.html" id="ConsultaOLT">Status OLT </a></li>
             <li class="itensOne" href="#" id="Scripts">Comandos OLT</li> 
