--- a/status-olt.html
+++ b/status-olt.html
@@ -17,9 +17,9 @@
     <header>
         <div class="menuOne">
             <ul>
-              <li class="itensOne" href="#" id="InformacoesONU">Informações ONU</li>
+              <li class="itensOne" href="#" id="InformacoesONU"><a href="index.html" class="nav-link"> Informações ONU</a></li>
               <li class="itensOne" href="#" id="ProvisionarONU">Provisionar ONU</li>
-              <li class="itensOne"><a href="#status-olt.html" id="ConsultaOLT">Status OLT </a></li>
+              <li class="itensOne"><a href="status-olt.html" id="ConsultaOLT">Status OLT </a></li>
               <li class="itensOne" href="#" id="Scripts">Comandos OLT</li> 
               <li class="itensOne" href="#" id="Relatorios">Relatórios</li>
               <li class="itensOne" href="#" id="Usuários">Usuários</li>
