--- a/status-olt.html
+++ b/status-olt.html
@@ -13,17 +13,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
-<body>
+<body class="body">
     <header>
         <div class="menuOne">
-            <ul>
-              <li class="itensOne" href="#" id="InformacoesONU"><a href="index.html" class="nav-link"> Informações ONU</a></li>
-              <li class="itensOne" href="#" id="ProvisionarONU">Provisionar ONU</li>
-              <li class="itensOne"><a href="status-olt.html" id="ConsultaOLT">Status OLT </a></li>
-              <li class="itensOne" href="#" id="Scripts">Comandos OLT</li> 
-              <li class="itensOne" href="#" id="Relatorios">Relatórios</li>
-              <li class="itensOne" href="#" id="Usuários">Usuários</li>
-            </ul>
+          <ul class="nav">
+            <li class="itensOne nav-item"><a class="nav-link text-light" href="index.html" id="InformacoesONU"> Informações ONU</a></li>
+            <li class="itensOne nav-item"><a class="nav-link text-light" href="provisiona-onu.html" id="ProvisionarONU">Provisionar ONU</a></li>
+            <li class="itensOne nav-item"><a class="nav-link text-light active" href="status-olt.html" id="ConsultaOLT">Status OLT </a></li>
+            <li class="itensOne nav-item"><a class="nav-link text-light" href="comandos-olt.html" id="Scripts"> Comandos OLT </a></li> 
+            <li class="itensOne nav-item"><a class="nav-link text-light" href="relatorios.html" id="Relatorios"> Relatórios </a></li>
+            <li class="itensOne nav-item"><a class="nav-link text-light" href="usuarios.html" id="Usuários"> Usuários </a></li>
+          </ul>
         </div>
     </header>
 
@@ -130,5 +130,14 @@
 
     </div>
 </body>
+
+<script>
+  $(document).ready(function(){
+      $('[data-toggle="tooltip"]').tooltip({
+        placement: 'bottom',
+        trigger: 'hover'
+      });
+  });
+</script>
 
 </hmtl:5>
