--- a/status-olt.html
+++ b/status-olt.html
@@ -19,7 +19,7 @@
           <ul class="nav">
             <li class="itensOne nav-item"><a class="nav-link text-light" href="index.html" id="InformacoesONU"> Informações ONU</a></li>
             <li class="itensOne nav-item"><a class="nav-link text-light" href="provisiona-onu.html" id="ProvisionarONU">Provisionar ONU</a></li>
-            <li class="itensOne nav-item"><a class="nav-link text-light active" href="status-olt.html" id="ConsultaOLT">Status OLT </a></li>
+            <li class="itensOne itensOneActive nav-item"><a class="nav-link text-light" href="status-olt.html" id="ConsultaOLT">Status OLT </a></li>
             <li class="itensOne nav-item"><a class="nav-link text-light" href="comandos-olt.html" id="Scripts"> Comandos OLT </a></li> 
             <li class="itensOne nav-item"><a class="nav-link text-light" href="relatorios.html" id="Relatorios"> Relatórios </a></li>
             <li class="itensOne nav-item"><a class="nav-link text-light" href="usuarios.html" id="Usuários"> Usuários </a></li>
