--- a/provisiona-onu.html
+++ b/provisiona-onu.html
@@ -18,7 +18,7 @@
         <div class="menuOne">
           <ul class="nav">
             <li class="itensOne nav-item"><a class="nav-link text-light" href="index.html" id="InformacoesONU"> Informações ONU</a></li>
-            <li class="itensOne nav-item"><a class="nav-link text-light active" href="provisiona-onu.html" id="ProvisionarONU">Provisionar ONU</a></li>
+            <li class="itensOne itensOneActive nav-item"><a class="nav-link text-light" href="provisiona-onu.html" id="ProvisionarONU">Provisionar ONU</a></li>
             <li class="itensOne nav-item"><a class="nav-link text-light" href="status-olt.html" id="ConsultaOLT">Status OLT </a></li>
             <li class="itensOne nav-item"><a class="nav-link text-light" href="comandos-olt.html" id="Scripts"> Comandos OLT </a></li> 
             <li class="itensOne nav-item"><a class="nav-link text-light" href="relatorios.html" id="Relatorios"> Relatórios </a></li>
@@ -32,6 +32,10 @@
             <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
             Carregando...
           </button>
+    </div>
+
+    <div class="menuTwo">
+      <h3>ONUs não provisionadas</h3>
     </div>
 </body>
 
