Incluindo a OLT TVN

--- a/status-olt.html
+++ b/status-olt.html
@@ -87,6 +87,7 @@
           <option value="51">Bequimão 2</option>
           <option value="52">Cohama</option>
           <option value="53">Angelim</option>
+          <option value="54">TVN</option>
         </select>
       </div>
 
