--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
     <div class="menuTwo">
         
       <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist">
-        <li>
+        <li  class="nav-item">
             <input id="pesquisar_input" class="form-control mr-sm-2" type="search" placeholder="Digite o contrato" aria-label="Search">
             <button id="pesquisar_button" class="btn btn-outline-success my-2 my-sm-0" type="submit" onclick="pesquisar()">Pesquisar</button>
         </li>
+
         <li class="nav-item" role="presentation">
           <a class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true"> STATUS ONU </a>
         </li>
