--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="menuTwo">
         
       <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist">
-        <li  class="nav-item">
+        <li class="nav-item form-inline">
             <input id="pesquisar_input" class="form-control mr-sm-2" type="search" placeholder="Digite o contrato" aria-label="Search">
             <button id="pesquisar_button" class="btn btn-outline-success my-2 my-sm-0" type="submit" onclick="pesquisar()">Pesquisar</button>
         </li>
