--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="body">
     <header>
       <div class="menuOne">
-          <ul class="nav">
+          <ul class="nav justify-content-center">
             <li class="itensOne itensOneActive nav-item"><a class="nav-link text-light" href="index.html" id="InformacoesONU"> Informações ONU</a></li>
             <li class="itensOne nav-item"><a class="nav-link text-light" href="provisiona-onu.html" id="ProvisionarONU">Provisionar ONU</a></li>
             <li class="itensOne nav-item"><a class="nav-link text-light" href="status-olt.html" id="ConsultaOLT">Status OLT </a></li>
@@ -28,13 +28,11 @@
     </header>
 
     <div class="menuTwo">
-        
       <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist">
         <li class="nav-item form-inline">
             <input id="pesquisar_input" class="form-control mr-sm-2" type="search" placeholder="Digite o contrato" aria-label="Search">
             <button id="pesquisar_button" class="btn btn-outline-success my-2 my-sm-0" type="submit" onclick="pesquisar()">Pesquisar</button>
         </li>
-
         <li class="nav-item" role="presentation">
           <a class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true"> STATUS ONU </a>
         </li>
