Adicionado Acesso remoto

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
               <button type="button" class="btn btn-primary btn-lg" id="configure-onu"> Configurar IP </button>
               <button type="button" class="btn btn-primary btn-lg" id="config-dns"> Configurar DNS </button>
               <button type="button" class="btn btn-primary btn-lg" id="restore-onu"> Restaurar </button>
+              <button type="button" class="btn btn-primary btn-lg" id="restore-onu"> Acesso remoto </button>
             </div>
           </div>
         </div>
