--- a/usuarios.html
+++ b/usuarios.html
@@ -1,47 +1,61 @@
 <!DOCTYPE html>
 <hmtl:5 lang="pt-br">
 
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Informações OLT </title>
     <link rel="stylesheet" href="css/index.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+      crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-</head>
+  </head>
 
-<body class="body">
+  <body class="body">
     <header>
-        <div class="menuOne">
-          <ul class="nav">
-            <li class="itensOne nav-item"><a class="nav-link text-light" href="index.html" id="InformacoesONU"> Informações ONU</a></li>
-            <li class="itensOne nav-item"><a class="nav-link text-light" href="provisiona-onu.html" id="ProvisionarONU">Provisionar ONU</a></li>
-            <li class="itensOne nav-item"><a class="nav-link text-light" href="status-olt.html" id="ConsultaOLT">Status OLT </a></li>
-            <li class="itensOne nav-item"><a class="nav-link text-light" href="comandos-olt.html" id="Scripts"> Comandos OLT </a></li> 
-            <li class="itensOne nav-item"><a class="nav-link text-light" href="relatorios.html" id="Relatorios"> Relatórios </a></li>
-            <li class="itensOne itensOneActive nav-item"><a class="nav-link text-light" href="usuarios.html" id="Usuários"> Usuários </a></li>
-          </ul>
-        </div>
+      <div class="menuOne">
+        <ul class="nav justify-content-center">
+          <li class="itensOne nav-item"><a class="nav-link text-light" href="index.html"
+              id="InformacoesONU"> Informações ONU</a></li>
+          <li class="itensOne nav-item"><a class="nav-link text-light" href="provisiona-onu.html"
+              id="ProvisionarONU">Provisionar ONU</a></li>
+          <li class="itensOne nav-item"><a class="nav-link text-light" href="status-olt.html" id="ConsultaOLT">Status
+              OLT
+            </a></li>
+          <li class="itensOne nav-item"><a class="nav-link text-light" href="comandos-olt.html" id="Scripts"> Comandos
+              OLT
+            </a></li>
+          <li class="itensOne nav-item"><a class="nav-link text-light" href="relatorios.html" id="Relatorios">
+              Relatórios
+            </a></li>
+          <li class="itensOne  itensOneActive nav-item"><a class="nav-link text-light" href="usuarios.html" id="Usuários"> Usuários </a>
+          </li>
+        </ul>
+      </div>
     </header>
 
     <div class="menuTwo loading">
-        <button class="btn btn-primary" tabindex="0" data-toggle="tooltip" title="Ainda construindo essa função." type="button">
-            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-            Carregando...
-          </button>
+      <button class="btn btn-primary" tabindex="0" data-toggle="tooltip" title="Ainda construindo essa função."
+        type="button">
+        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+        Carregando...
+      </button>
     </div>
-</body>
+  </body>
 
-<script>
-    $(document).ready(function(){
-        $('[data-toggle="tooltip"]').tooltip({
-          placement: 'bottom',
-          trigger: 'hover'
-        });
+  <script>
+    $(document).ready(function () {
+      $('[data-toggle="tooltip"]').tooltip({
+        placement: 'bottom',
+        trigger: 'hover'
+      });
     });
-</script>
+  </script>
 
 </hmtl:5>
