adicionando o comando sincronizar banda

--- a/comandos-olt.html
+++ b/comandos-olt.html
@@ -194,6 +194,27 @@
           </tbody>
         </table>
       </section>
+
+      <section class="sincronizar-banda-container">
+        <h4 class="titulo-conteiner"> Sincronizar banda</h4>
+        <table>
+          <tbody id="olt-comando-sincronizar-banda">
+            <tr>
+              <td id="texto-selecionar-olt-sincronizar-banda"> Selecionar a OLT </td>
+              <td id="tabela-selecionar-sincronizar-banda">
+                <select class="custom-select select" id="inputGroupSelect01">
+                  <option selected>Cidade Operária</option>
+                  <option value="1">Araçagy</option>
+                  <option value="2">Bacanga</option>
+              </td>
+              <td id="botao-selecionar-olt-sincronizar-banda">
+                <button id="pesquisar_button" class="btn btn-outline-success my-2 my-sm-0" type="submit"
+                  onclick="setar_vlan()"> Sincronizar banda </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
     </main>
   </body>
 </hmtl:5>
