--- a/comandos-olt.html
+++ b/comandos-olt.html
@@ -6,29 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Informações ONU</title>
   <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/comandosOlts.css"
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
   <body class="body">
     <header>
       <div class="menuOne">
-        <ul class="nav justify-content-center">
-          <li class="itensOne nav-item"><a class="nav-link text-light" href="index.html" id="InformacoesONU">
-              Informações ONU</a></li>
-          <li class="itensOne nav-item"><a class="nav-link text-light" href="provisiona-onu.html"
-              id="ProvisionarONU">Provisionar ONU</a></li>
-          <li class="itensOne nav-item"><a class="nav-link text-light" href="status-olt.html" id="ConsultaOLT">Status
-              OLT
-            </a></li>
-          <li class="itensOne itensOneActive nav-item"><a class="nav-link text-light" href="comandos-olt.html"
-              id="Scripts"> Comandos
-              OLT
-            </a></li>
-          <li class="itensOne nav-item"><a class="nav-link text-light" href="relatorios.html" id="Relatorios">
-              Relatórios
-            </a></li>
-          <li class="itensOne nav-item"><a class="nav-link text-light" href="usuarios.html" id="Usuários"> Usuários </a>
-          </li>
+        <ul class="ul-menu-one">
+          <li class="itensOne "><a href="index.html" id="informacoes-onu"> Informações ONU</a></li>
+          <li class="itensOne "><a href="provisiona-onu.html" id="provisionar-onu">Provisionar ONU</a></li>
+          <li class="itensOne "><a href="status-olt.html" id="consulta-olt">Status OLT </a></li>
+          <li class="itensOne itensOneActive"><a href="comandos-olt.html" id="script-olt"> Comandos OLT </a></li>
+          <li class="itensOne "><a href="relatorios.html" id="relatorios"> Relatórios </a></li>
+          <li class="itensOne "><a href="usuarios.html" id="usuarios"> Usuários </a> </li>
         </ul>
       </div>
     </header>
