--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
   </header>
 
   <div class="menuTwo">
-    <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist">
-      <li class="nav-item form-inline">
-        <input id="pesquisar_input" class="form-control mr-sm-2" type="search" placeholder="Digite o contrato"
+    <ul class="ul-menu-two">
+      <li class="itens "><a id="informacoes-onu"> Informações ONU</a></li>
+        <input id="pesquisar-input"  type="search" placeholder="Digite o contrato"
           aria-label="Search">
         <button id="pesquisar_button" class="btn btn-outline-success my-2 my-sm-0" type="submit"
           onclick="pesquisar()">Pesquisar</button>
