--- a/index.html
+++ b/index.html
@@ -25,25 +25,24 @@
 
   <div class="menuTwo">
     <ul class="ul-menu-two">
-      <li class="itens "><a id="informacoes-onu"> Informações ONU</a></li>
+      <li class="itensTwo "><a id="informacoes-onu"> Informações ONU</a></li>
         <input id="pesquisar-input"  type="search" placeholder="Digite o contrato"
           aria-label="Search">
-        <button id="pesquisar_button" class="btn btn-outline-success my-2 my-sm-0" type="submit"
+        <button id="pesquisar_button" type="submit"
           onclick="pesquisar()">Pesquisar</button>
       </li>
-      <li class="nav-item" role="presentation">
-        <a class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" href="#pills-home" role="tab"
-          aria-controls="pills-home" aria-selected="true"> STATUS ONU </a>
+      <li class="itensTwo" role="presentation">
+        <a class="" href="#onu-status-div-container"> STATUS ONU </a>
       </li>
-      <li class="nav-item" role="presentation">
-        <a class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" href="#pills-profile" role="tab"
+      <li class="itensTwo" role="presentation">
+        <a class="" href="#pills-profile" role="tab"
           aria-controls="pills-profile" aria-selected="false"> CONFIGURAR ONU </a>
       </li>
-      <li class="nav-item" role="presentation">
+      <li class="itensTwo" role="presentation">
         <a class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" href="#pills-contact" role="tab"
           aria-controls="pills-contact" aria-selected="false"> WIFI ONU </a>
       </li>
-      <li class="nav-item" role="presentation">
+      <li class="itensTwo" role="presentation">
         <a class="nav-link" id="pills-phone-tab" data-bs-toggle="pill" href="#pills-phone" role="tab"
           aria-controls="pills-phone" aria-selected="false">TELEFONIA</a>
       </li>
@@ -51,7 +50,7 @@
   </div>
 
   <div class="tab-content" id="pills-tabContent">
-    <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+    <div class="" id="onu-status-div-container" role="tabpanel">
 
       <div class="tabela-status-olt">
         <table cellspacing="10" cellpadding="9" align="center" class="table table-bordered">
